src/index.css
@import url('https://fonts.googleapis.com/css2?family=Cascadia+Mono:ital,wght@0,200..700;1,200..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@import "tailwindcss";

@utility container{
  margin:auto
}

:root {
  --font-base: "Poppins", sans-serif;
}

body{
  font-family: var(--font-base);
}

input:focus{
  outline: none;
}

